--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             "email": "faresleshinawy560@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "config": {
         "allow-plugins": {
             "php-http/discovery": true
